unpackaged/main/default/objects/CZ_Mapping__mdt/CZ_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used to determine applicable cost zones based on contract country, state and cost zone</description>
    <label>Cost Zone Mapping</label>
    <pluralLabel>Cost Zone Mapping</pluralLabel>
</CustomObject>