unpackaged/main/default/objects/CZ_Mapping__mdt/fields/Applicable_Cost_Zones__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Cost_Zones__c</fullName>
    <description>Applicable Cost Zones based on country, state &amp; cost zone</description>
    <label>Applicable Cost Zones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>