unpackaged/main/default/objects/CZ_Mapping__mdt/fields/Cost_Zone__c.field-meta.xml
<CustomField>
    <fullName>Cost_Zone__c</fullName>
    <label>Cost Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <default>true</default>
                <label>ALL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>