unpackaged/main/default/objects/CZ_Mapping__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&quot;Australia&quot;</defaultValue>
    <description>Contract Country</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
                <default>true</default>
                <label>Australia</label>
            </value>
            <value>
                <fullName>New Zealand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>