unpackaged/main/default/objects/CZ_Mapping__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Contract State</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NATIONAL</fullName>
                <default>true</default>
                <label>NATIONAL</label>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>NQ</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>NI</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>