unpackaged/main/default/objects/CZ_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Country__c</columns>
    <columns>State__c</columns>
    <columns>Cost_Zone__c</columns>
    <columns>Applicable_Cost_Zones__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>